--- a/apps/my-todo/package.json
+++ b/apps/my-todo/package.json
@@ -21,6 +21,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5"
   }
