--- a/apps/my-todo/package.json
+++ b/apps/my-todo/package.json
@@ -12,8 +12,10 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.6",
     "redux": "^4.2.0",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
