--- a/apps/react-ssr/package.json
+++ b/apps/react-ssr/package.json
@@ -3,10 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/babel-plugin": "^5.13.2",
     "@loadable/component": "^5.15.2",
+    "@loadable/server": "^5.15.2",
+    "@reduxjs/toolkit": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +41,19 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.8"
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@loadable/webpack-plugin": "^5.15.2",
+    "@types/loadable__component": "^5.13.4",
+    "@types/loadable__server": "^5.12.6",
+    "@types/react-dom": "^18.0.8",
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "typescript-plugin-styled-components": "^2.0.0",
+    "webpack": "^5.74.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
